<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="3dp"
    android:layout_margin="0dp"
    android:background="@drawable/box">
    <Button
        android:id="@+id/refreshBtn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/btnRefrsh"
        android:textColor="#2630ba"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:includeFontPadding="false"
        android:minHeight="0dp"
        android:background="@drawable/mybutton"
        android:minWidth="0dp" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_margin="0dp">
        <TextView
            android:id="@+id/text_sent1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:text="@string/sent1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="0dp"
            android:textColor="#000000"
            android:layout_margin="0dp"/>

        <TextView
            android:id="@+id/text_sent2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:text="@string/sent2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="0dp"
            android:textColor="#000000"
            android:layout_margin="0dp"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp"
        android:layout_margin="0dp">
        <TextView
            android:id="@+id/text_deliver1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:text="@string/deliver1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="0dp"
            android:textColor="#000000"
            android:layout_margin="0dp"/>
        <TextView
            android:id="@+id/text_deliver2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center|center_vertical|center_horizontal"
            android:text="@string/deliver2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:padding="0dp"
            android:textColor="#000000"
            android:layout_margin="0dp"/>
    </LinearLayout>
</LinearLayout>
